--- a/src/SidebarWithMenu/Tutorial/TutorialMenu.css
+++ b/src/SidebarWithMenu/Tutorial/TutorialMenu.css
@@ -1,37 +1,37 @@
 .vertical-menu {
-    width: 38px;
-    background-color: #E3E1D9;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .vertical-button {
-    width: 100%;
-    height: 90px;
-    background-color: #c7c3b3;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 82%);
-    border-radius: 0;
-  }
-  
-  .vertical-button:hover {
-    background-color: #c6c3b8;
-  }
-  
-  .vertical-text {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    font-size: 16px;
-    color: black;
-    text-align: center;
-  }
-  
-  .vertical-button.active {
-    background-color: #a9a6a0;  /* Darker shade for active button */
-  }
+  width: 38px;
+  background-color: #e3e1d9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.vertical-button {
+  width: 100%;
+  height: 100px;
+  background-color: #c7c3b3;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  clip-path: polygon(0% 18%, 100% 0%, 100% 100%, 0% 82%);
+  border-radius: 0;
+}
+
+.vertical-button:hover {
+  background-color: #c6c3b8;
+}
+
+.vertical-text {
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-size: 16px;
+  color: black;
+  text-align: center;
+}
+
+.vertical-button.active {
+  background-color: #a9a6a0; /* Darker shade for active button */
+}
